# mark_word_fastapi

./: Dockerfile  LICENSE  README.md  build.sh  main.py  pyproject.toml  requirements.txt
.github/workflows/: docker-ci.yml
app/templates/: index.html  result.html
kubernetes/fastapi-chart/: Chart.yaml  values.yaml
kubernetes/fastapi-chart/templates/: _helpers.tpl  deployment.yaml  ingress.yaml  service.yaml
kubernetes/mark-word-fastapi-chart/: values.yaml
kubernetes/mark-word-fastapi-chart/templates/: _helpers.tpl  deployment.yaml  ingress.yaml
templates/: index.html  result.html
