[project]
name = "mark-word-fastapi"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi~=0.115.5",
    "jinja2~=3.1.4",
    "pydantic~=2.9.2",
    "python-multipart~=0.0.17",
    "reportlab~=4.2.5",
    "thulac~=0.2.2",
    "uvicorn~=0.32.0",
]
